--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.6",
+    "@react-three/fiber": "8.17.10",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "axios": "^1.6.2",
-    "@react-three/fiber": "8.17.10",
     "three": "^0.171.0"
   },
   "devDependencies": {
