Added health check to API

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,6 @@
 DATABASE_URL="Server=localhost;Database=admin_pods;User=sa;Password=YourPassword123;TrustServerCertificate=true"
 PORT=3000
 NODE_ENV=development
+APP_ENV_NAME=local
+# Optional: supply the current commit hash for /health responses
+GIT_COMMIT=
