--- a/api/.env.example
+++ b/api/.env.example
@@ -4,3 +4,9 @@ NODE_ENV=development
 APP_ENV_NAME=local
 # Optional: supply the current commit hash for /health responses
 GIT_COMMIT=
+
+# e-automate ERP connection (CoRPG database)
+EAUTOMATE_SERVER=AS05
+EAUTOMATE_DATABASE=CoRPG
+EAUTOMATE_USER=mkadonof
+EAUTOMATE_PASSWORD=
