--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,8 @@
     "prisma:migrate": "prisma migrate dev --name",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio",
+    "migrate:entity-types": "npx ts-node scripts/migrate-entity-types.ts",
+    "sync:eautomate": "npx ts-node scripts/sync-eautomate.ts",
     "test": "jest"
   },
   "keywords": [],
@@ -17,20 +19,22 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.8.0",
-    "express": "^4.18.2",
+    "@types/mssql": "^9.1.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mssql": "^12.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
     "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
-    "ts-node-dev": "^2.0.0",
-    "ts-node": "^10.9.2",
-    "prisma": "^5.8.0",
-    "jest": "^29.7.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1"
+    "@types/node": "^20.10.6",
+    "jest": "^29.7.0",
+    "prisma": "^5.8.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   }
 }
