--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "prisma:studio": "prisma studio",
     "migrate:entity-types": "npx ts-node scripts/migrate-entity-types.ts",
     "sync:eautomate": "npx ts-node scripts/sync-eautomate.ts",
+    "generate:customer-floors": "npx ts-node scripts/generate-customer-floors.ts",
     "test": "jest"
   },
   "keywords": [],
